# crewai_vision

crewai_vision_tool/: README.md  extracted_text.txt  o.rm  pyproject.toml  report.md
crewai_vision_tool/src/crewai_vision_tool/: crew.py  main.py
crewai_vision_tool/src/crewai_vision_tool/config/: agents.yaml
