[project]
name = "crewai_vision_tool"
version = "0.1.0"
description = "crewai_vision_tool using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0"
]

[project.scripts]
crewai_vision_tool = "crewai_vision_tool.main:run"
run_crew = "crewai_vision_tool.main:run"
train = "crewai_vision_tool.main:train"
replay = "crewai_vision_tool.main:replay"
test = "crewai_vision_tool.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
